--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,13 @@
     <name>Alea Iacta Est - Parser: picocli</name>
     <artifactId>alea-iacta-parser-picocli</artifactId>
     <packaging>jar</packaging>
-    
+
+    <scm>
+        <connection>scm:git:git://github.com/journeyman88/alea-iacta-parser-picocli</connection>
+        <developerConnection>scm:git:ssh://github.com/journeyman88/alea-iacta-parser-picocli</developerConnection>
+        <url>https://github.com/journeyman88/alea-iacta-parser-picocli</url>
+    </scm>    
+
     <repositories>
         <repository>
             <id>jitpack.io</id>
