--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,11 @@
     <parent>
         <groupId>net.unknowndomain</groupId>
         <artifactId>alea-iacta-est</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
     <name>Alea Iacta Est - Parser: picocli</name>
     <artifactId>alea-iacta-parser-picocli</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <scm>
@@ -27,7 +28,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>alea-iacta-core</artifactId>
-            <version>${project.version}</version>
+            <version>[1.0.0,2.0.0)</version>
         </dependency>
         <dependency>
             <groupId>info.picocli</groupId>
