--- a/pom.xml
+++ b/pom.xml
@@ -8,14 +8,14 @@
     </parent>
     <name>Alea Iacta Est - Parser: picocli</name>
     <artifactId>alea-iacta-parser-picocli</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
     <packaging>jar</packaging>
 
     <scm>
         <connection>scm:git:git://github.com/journeyman88/alea-iacta-parser-picocli</connection>
         <developerConnection>scm:git:ssh://git@github.com/journeyman88/alea-iacta-parser-picocli</developerConnection>
         <url>https://github.com/journeyman88/alea-iacta-parser-picocli</url>
-      <tag>1.0.0</tag>
+      <tag>2.0.0</tag>
   </scm>    
 
     <repositories>
